# Refactor_and_CI

./: .coverage  README.md  pyproject.toml
.github/workflows/: python-app.yml
rci/rci/: src.py
